welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:10: error: ';' expected but 'return' found.
	}return -1
         ^